# spo_lab3

./: .gitignore  CMakeLists.txt  Makefile  architecture.pdsl  error.c  error.h  execution  execution.c  execution.h  lex.yy.c  listing.c  listing.h  main.c  main.h  node.c  node.h  out.ptptb  parser.c  parser.h  parser.tab.c  parser.tab.h  test-list.asm
input/: input.txt
source/: lexems.l  parser.y
